--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,22 @@ services:
     volumes:
       - .:/app
     ports:
-      - "4000:4000"
-    command: sh -c "npm install && npm run start:dev"
+      - '4000:4000'
+    command: npm run start:dev
+    depends_on:
+      - db
+  db:
+    image: mysql:5.7
+    platform: linux/amd64
+    container_name: todo-app-2024-mysql
+    environment:
+      MYSQL_DATABASE: 'todo_db'
+      MYSQL_USER: 'test'
+      MYSQL_PASSWORD: 'test1234'
+      MYSQL_ROOT_PASSWORD: 'test1234'
+    ports:
+      - '3306:3306'
+    volumes:
+      - todo-db:/var/lib/mysql
+volumes:
+  todo-db:
