ユーザーと会社情報の紐付け

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "rimraf dist/",
     "build": "nest build && copyfiles -u 2 src/migrations/**/* dist/migrations && copyfiles -u 2 src/seeders/**/* dist/seeders",
     "postbuild": "echo Build complete.",
-    "migrate": "sequelize-cli db:migrate",
+    "migrate": "copyfiles -u 2 src/migrations/**/* dist/migrations && sequelize-cli db:migrate",
+    "migrate:undo": "sequelize-cli db:migrate:undo",
     "seed:generate": "sequelize-cli seed:generate --name",
     "seed:all": "sequelize-cli db:seed:all",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
