--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ const path = require('path');
 module.exports = {
   config: path.resolve('dist', 'sequelize.config.js'),
   'models-path': path.resolve('dist', 'models'),
-  'migrations-path': path.resolve('dist', 'migrations'),
-  'seeders-path': path.resolve('dist', 'seeders'),
+  'migrations-path': path.resolve('dist', 'db/migrations'),
+  'seeders-path': path.resolve('dist', 'db/seeders'),
 };
