--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist/",
-    "build": "nest build && copyfiles -u 2 src/migrations/**/* dist/migrations && copyfiles -u 2 src/seeders/**/* dist/seeders",
+    "build": "nest build && copyfiles -u 2 db/migrations/**/* dist/db/migrations && copyfiles -u 2 db/seeders/**/* dist/db/seeders",
     "postbuild": "echo Build complete.",
-    "migrate": "copyfiles -u 2 src/migrations/**/* dist/migrations && sequelize-cli db:migrate",
+    "migrate": "copyfiles -u 2 db/migrations/**/* dist/db/migrations && sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
     "seed:generate": "sequelize-cli seed:generate --name",
     "seed:all": "sequelize-cli db:seed:all",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -50,7 +51,10 @@
     "copyfiles": "^2.4.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "sequelize-cli": "^6.6.2",
