--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - .:/app
     ports:
       - '4000:4000'
+    env_file:
+      - ./.env
     command: npm run start:dev
     depends_on:
       - db
